--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,12 @@
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(16, 196, 100);
 }
+.full{
+  max-width: 100%;
+  width: 100% !important;
+  flex:  0 0 100%;
+  padding: 0 !important;
+}
 header{
   width: 100%;
   height: 80px;
@@ -48,16 +54,23 @@ header .logo img {
 header a{
   text-decoration: none !important;
   background: none !important;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 
 }
-header .logo span{
+header .logo h5{
   font-size: 1.5rem;
   font-weight: 700;
   color: rgb(9, 167, 229) !important;
   text-decoration: none !important;
   margin-left: 5px;
-  text-transform: uppercase;
+  margin-top: 12px;
+  text-transform: capitalize;
 
+}
+header .logo h5 span{
+  color: orange !important;
 }
 header .headerWrapper{
   display:  flex;
@@ -95,7 +108,14 @@ header button.rounded-circle svg{
   height: 40px;
   background-color: #e0e4ed;
   padding: 0 20px;
+
   
+}
+
+@media only screen and (max-width: 600px) {
+ .searchBox{
+  opacity: 0;
+ }
 }
 .searchBox input{
  padding-left: 5px;
@@ -113,6 +133,231 @@ header button.rounded-circle svg{
   color: rgba(33, 198, 198, 0.886);
   background-color: transparent;
 }
+
+.btn-signin{
+  padding: 8px 18px !important;
+  border-radius: 30px !important;
+  text-transform: capitalize !important;
+  background-color:rgba(33, 198, 198, 0.886) !important ;
+  color: white !important;
+
+}
+.signInSection{
+  width: 100%;
+  height: 100vh;
+  padding: 35px 25px;
+  background-color: white;
+}
+
+.signInSection.signUp {
+ height: auto !important;
+}
+
+.signInSection .logo img{
+  width: 80px;
+}
+.signInSection .logo h5{
+  font-size: 20px ;
+  font-weight: 600;
+  color:gray;
+  margin-top: 10px;
+}
+.signInSection .logo h5 span{
+  color: orange;
+}
+
+.LoginPattern{
+  position: fixed;
+  inset: 0;
+  opacity: 0.08;
+  z-index: 1;
+  pointer-events: none;
+
+}
+
+.signInSection .SignInBox{
+  width: 350px;
+  height: auto;
+  margin: auto;
+  z-index: 100;
+}
+.signInSection .SignInBox.signUpBox{
+  width: 450px;
+}
+
+
+.signInSection .SignInBox .wrapper{
+  width: 100%;
+  height: auto;
+  background-color:#eeeeeef0 ;
+  border-radius: 10px;
+  border: 1px solid rgba(0,0,0,0.1);
+  position: relative;
+  z-index: 100;
+}
+.signInSection .SignInBox .wrapper .form-control{
+  background-color: #fff !important;
+  box-shadow: none;
+  outline: none !important;
+  border-radius: 5px !important;
+  font-size: 14px !important;
+  font-weight: 500;
+  border: none !important;
+  height: 45px;
+  padding-left: 45px;
+
+}
+.signInSection .SignInBox .wrapper .form-control:focus{
+  border: 1px solid rgba(33, 198, 198, 0.886) !important;
+}
+.signInSection .SignInBox .wrapper .form-group .icon{
+  position: absolute;
+  top: 15px;
+  font-size: 20px;
+  z-index: 99;
+  left: 10px;
+  color: rgb(92, 92, 92);
+}
+.signInSection .SignInBox .wrapper .form-group.focus .icon svg{
+  color: rgba(33, 198, 198, 0.886) !important;
+}
+
+.toggleShowPass{
+  position: absolute;
+  top: 15px;
+  right: 10px;
+   font-size: 20px;
+  z-index: 99;
+  color: rgb(92, 92, 92);
+
+}
+
+.btn-big{
+  padding: 8px 25px !important;
+  background-color: rgba(33, 198, 198, 0.886) !important;
+  text-transform: capitalize !important;
+  color: white !important;
+  border-radius: 5px !important;
+  font-size: 14px !important;
+}
+.signInSection .SignInBox .wrapper .link{
+  color: rgb(75, 75, 75);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 500;
+  text-align: center;
+  margin-top: 12px;
+
+}
+.signInSection .SignInBox .wrapper .link:hover{
+  text-decoration: underline;
+}
+
+.signInSection .SignInBox .wrapper .link.color{
+  color: #0066ff !important;
+  font-size: 14px ;
+  text-transform: capitalize !important;
+  margin-left: 2px;
+}
+.signInSection .SignInBox .wrapper .or span.line{
+ display: block;
+ width: 35%;
+ height: 1px ;
+ background-color: rgba(0,0,0,0.2);
+}
+.signInSection .SignInBox .wrapper .or{
+  justify-content: center;
+  align-items: center;
+}
+
+.signInSection .SignInBox .wrapper .or span.txt{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0,0,0,0.2);
+  font-size: 14px;
+}
+.signinWhitGoogle button{
+  text-transform: capitalize !important;
+  background-color: #0066ff ;
+  color: white;
+}
+.signinWhitGoogle button svg{
+  font-size: 16px;
+}
+
+
+.signInSection .SignInBox .wrapper .agree{
+  display: flex !important;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px !important;
+  margin-bottom: 10px;
+}
+.signInSection .SignInBox .wrapper .agree input[type='checkbox']{
+  height: 20px !important;
+  width: 20px !important;
+  
+
+}
+.signInSection .SignInBox .wrapper .agree input[type='checkbox']:checked{
+background-color: rgba(33, 198, 198, 0.886) !important;
+}
+
+
+.custom-checkbox {
+  display: none;
+}
+
+/* Style custom checkbox box */
+.checkbox-label {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  font-size: 14px !important;
+  user-select: none;
+  text-transform: lowercase !important;
+}
+
+.checkbox-label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 1px;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ccc;
+  background-color: white;
+  border-radius: 4px;
+  transition: all 0.2s;
+}
+
+/* When checked, change background color */
+.custom-checkbox:checked + .checkbox-label::before {
+  background-color: rgba(33, 198, 198, 0.886);
+  border-color: rgba(33, 198, 198, 0.886);
+}
+
+/* Optional: add a checkmark */
+.custom-checkbox:checked + .checkbox-label::after {
+  content: "✔";
+  position: absolute;
+  left: 4px;
+  top: -2px;
+  font-size: 18px;
+  color: white;
+}
+
+
+
+
+
+
 .myAcc {
   display: flex;
   justify-content: center;
@@ -124,12 +369,13 @@ header button.rounded-circle svg{
   border-radius: 50%;
   /* overflow: hidden; */
   padding: 2px;
-  border: 2px dashed rgba(33, 198, 198, 0.886);
+  border: 2px dashed rgba(233, 98, 8, 0.886);
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  background-color: rgba(209, 119, 9, 0.721);
 }
 /* .userImg .rounded-circle{
   width: 100%;
@@ -138,6 +384,9 @@ header button.rounded-circle svg{
   overflow: hidden;
   border-radius: 50%;
 } */
+ .userImg .rounded-circle{
+  color: rgb(246, 246, 245);
+ }
 .userImg .rounded-circle img{
   width: 100%;
   height: 100%;
@@ -1633,3 +1882,107 @@ ul{
   border-radius: 10px !important;
   margin-top: 5px !important;
 }
+
+.address{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+}
+
+.address span,.btn-view-detail{
+  padding: 2px 10px ;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  font-size: 12px;
+  border-radius: 5px;
+  background-color: #b1b1b14d;
+}
+
+.cartItemImageWrapper .imageWrapper{
+  width: 80px;
+  overflow: hidden;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  height: 80px;
+}
+.cartItemImageWrapper .imageWrapper img{
+  width: 100%;
+  height: 100%;
+}
+
+.btn-view-detail{
+  cursor: pointer;
+}
+
+.success,.pending{
+  padding: 2px 10px;
+  /* border: 1px solid; */
+  font-size: 14px;
+  border-radius: 2px;
+  text-transform: capitalize;
+}
+
+.success{
+  background-color: #00b85337;
+  color: #00b853;
+  border: 1px solid  #00b8536f;
+  
+}
+.pending{
+  background-color: #e9190a56;
+  color: #c51407;
+  border: 1px solid #e9190a6b;
+}
+.table th,.table td {
+  white-space: nowrap;
+}
+
+.OrderList {
+  min-height: 400px;
+  overflow-y: auto;
+}
+
+.productModal .MuiPaper-elevation {
+  padding: 40px ;
+  position: relative;
+  max-width: 900px;
+  width: 900px;
+  
+}
+
+
+.productModal .close_{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+ max-width: 40px !important;
+ width: 40px !important;
+ font-size: 20px;
+}
+
+.table{
+  vertical-align: middle !important;
+}
+
+.banner-slideImage{
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  height: 150px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 25px rgba(0,0,0,0.2);
+  overflow: hidden;
+}
+.banner-slideImage img,.banner-homeImage img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.banner-homeImage{
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  height: 300px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 25px rgba(0,0,0,0.2);
+  overflow: hidden;
+  
+}
+
